kubernetes/components/phpmyadmin/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
spec:
  selector:
    app.kubernetes.io/name: phpmyadmin
  ports:
    - name: http
      port: 80
      targetPort: http
